bk_ida/gccida/c3/gen_split_955
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_955/src/insn-emit.c:8666:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_955/src/insn-emit.c:8667:30: error: use of undeclared identifier 'machine_mode'
operands[2] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[2]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_955/src/insn-emit.c:8668:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[3]); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_955/src/obj/insn-emit.o] Error 1
